[package]
name = "sp2p"
version = "0.1.0"
rust-version = "1.84.0"
edition = "2021"

[profile.dev]
panic = "abort"

[profile.release]
lto = "thin"
strip = true
overflow-checks = true
panic = "abort"

[dependencies]
spectre-p2p-lib = { git = "https://github.com/spectre-project/rusty-spectre", tag = "v0.3.16" }
spectre-utils = { git = "https://github.com/spectre-project/rusty-spectre", tag = "v0.3.16" }

clap = { version = "4.5.16", features = ["derive"] }
tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
tonic = { version = "0.12.3", features = ["tls", "gzip"] }
itertools = "0.13.0"
uuid = { version = "1.11.0", features = ["v4"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0.128"
serde = { version = "1.0.210", features = ["derive"] }
